[gd_scene load_steps=7 format=2]

[ext_resource path="res://material_maker/graph_edit.gd" type="Script" id=1]
[ext_resource path="res://material_maker/icons/icons.svg" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 15.4016, 47.1451, 16.7512, 17.8319 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 16, 16 )

[node name="GraphEdit" type="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/bg = SubResource( 1 )
right_disconnects = true
use_snap = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GraphUI" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -262.0
margin_right = -16.0
margin_bottom = 24.0
alignment = 2

[node name="SubGraphUI" type="HBoxContainer" parent="GraphUI"]
margin_right = 214.0
margin_bottom = 24.0
size_flags_horizontal = 9

[node name="Label" type="LineEdit" parent="GraphUI/SubGraphUI"]
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 9

[node name="ButtonTransmitsSeed" type="Button" parent="GraphUI/SubGraphUI"]
margin_left = 154.0
margin_right = 182.0
margin_bottom = 24.0
hint_tooltip = "Affect children seeds"
size_flags_horizontal = 9
toggle_mode = true
icon = SubResource( 2 )

[node name="ButtonUp" type="Button" parent="GraphUI/SubGraphUI"]
margin_left = 186.0
margin_right = 214.0
margin_bottom = 24.0
hint_tooltip = "Back to parent"
size_flags_horizontal = 9
icon = SubResource( 3 )

[node name="ButtonShowTree" type="Button" parent="GraphUI"]
margin_left = 218.0
margin_right = 246.0
margin_bottom = 24.0
hint_tooltip = "Show hierarchy"
icon = SubResource( 4 )
[connection signal="connection_request" from="." to="." method="connect_node"]
[connection signal="connection_to_empty" from="." to="." method="request_popup"]
[connection signal="copy_nodes_request" from="." to="." method="copy"]
[connection signal="disconnection_request" from="." to="." method="disconnect_node"]
[connection signal="duplicate_nodes_request" from="." to="." method="duplicate_selected"]
[connection signal="node_selected" from="." to="." method="_on_GraphEdit_node_selected"]
[connection signal="paste_nodes_request" from="." to="." method="paste"]
[connection signal="timeout" from="Timer" to="." method="do_send_changed_signal"]
[connection signal="text_changed" from="GraphUI/SubGraphUI/Label" to="." method="_on_Label_text_changed"]
[connection signal="toggled" from="GraphUI/SubGraphUI/ButtonTransmitsSeed" to="." method="_on_ButtonTransmitsSeed_toggled"]
[connection signal="pressed" from="GraphUI/SubGraphUI/ButtonUp" to="." method="on_ButtonUp_pressed"]
[connection signal="pressed" from="GraphUI/ButtonShowTree" to="." method="_on_ButtonShowTree_pressed"]
